<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#788b91"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="10dp"
                android:text="Destination"
                android:textColor="#FFFFFF"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/newDestinationField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:background="@android:color/white"
                android:ems="10"
                android:hint="@string/newDestination"
                android:inputType="textPersonName"
                android:paddingLeft="5dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left|center_vertical"
                android:paddingLeft="15dp"
                android:text="Duration"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left|center_vertical"
                android:paddingLeft="0dp"
                android:text="Price"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="20dp"
            android:gravity="center_vertical|center_horizontal|center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/newDurationField"
                android:layout_width="55dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_weight="1"
                android:background="@android:color/white"
                android:ems="10"
                android:hint="@string/newDuration"
                android:inputType="numberDecimal"
                android:paddingLeft="5dp" />

            <EditText
                android:id="@+id/newPriceField"
                android:layout_width="55dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_weight="1"
                android:background="@android:color/white"
                android:ems="10"
                android:hint="@string/newPrice"
                android:inputType="numberDecimal"
                android:paddingLeft="5dp" />
        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>