<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:title="Create a Trip" />

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appBarLayout">

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#788b91"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appBarLayout">

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="165dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="0dp"
                android:layout_marginBottom="0dp"
                android:gravity="center_vertical"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/linearLayout"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:text="Departure"
                    android:textColor="@android:color/white"
                    android:textSize="30sp"
                    tools:layout_editor_absoluteX="16dp"
                    tools:layout_editor_absoluteY="16dp" />

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:text="Date"
                    android:textColor="@android:color/white"
                    android:textSize="30sp"
                    tools:layout_editor_absoluteX="16dp"
                    tools:layout_editor_absoluteY="150dp" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:text="Time"
                    android:textColor="@android:color/white"
                    android:textSize="30sp"
                    tools:layout_editor_absoluteX="16dp"
                    tools:layout_editor_absoluteY="85dp" />

                <TextView
                    android:id="@+id/textView15"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:text="Seats"
                    android:textColor="@android:color/white"
                    android:textSize="30sp"
                    tools:layout_editor_absoluteX="16dp"
                    tools:layout_editor_absoluteY="85dp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="185dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="0dp"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                tools:layout_editor_absoluteX="188dp">

                <EditText
                    android:id="@+id/departure_input"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@android:color/white"
                    android:ems="10"
                    android:hint="@string/departure"
                    android:inputType="textAutoCorrect"
                    android:paddingLeft="5dp"
                    android:text="Montreal"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/departure_date_input"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@android:color/white"
                    android:ems="10"
                    android:gravity="center_vertical"
                    android:hint="@string/departure_date"
                    android:inputType="date"
                    android:onClick="showDatePickerDialog"
                    android:paddingLeft="5dp"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/time_input"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@android:color/white"
                    android:ems="10"
                    android:hint="@string/time"
                    android:inputType="textAutoCorrect"
                    android:onClick="showTimePickerDialog"
                    android:paddingLeft="5dp"
                    android:textColor="@android:color/black" />

                <EditText
                    android:id="@+id/seats_input"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@android:color/white"
                    android:ems="10"
                    android:hint="@string/seats_input"
                    android:inputType="number"
                    android:paddingLeft="5dp"
                    android:textColor="@android:color/black" />

            </LinearLayout>

        </LinearLayout>

        <ScrollView
            android:id="@+id/comments_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="15dp"
                    android:text="Additional Comments"
                    android:textSize="22sp" />

                <EditText
                    android:id="@+id/comments_input_box"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="50dp"
                    android:hint="@string/comments_input" />

                <Button
                    android:id="@+id/_create"
                    android:layout_width="113dp"
                    android:layout_height="64dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="55dp"
                    android:background="#788b91"
                    android:text="Post"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.501"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout5" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>