<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:title="Modify a Trip" />

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="207dp"
        android:background="#788b91"
        android:gravity="bottom|center_horizontal"
        android:orientation="horizontal"
        android:paddingBottom="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="180dp"
            android:layout_margin="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="0dp"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:padding="0dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            tools:layout_editor_absoluteX="188dp">

            <EditText
                android:id="@+id/departure_input"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@android:color/white"
                android:ems="10"
                android:hint="City of Departure"
                android:inputType="textAutoCorrect"
                android:paddingLeft="5dp"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/departure_date_input"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@android:color/white"
                android:ems="10"
                android:gravity="center_vertical"
                android:hint="@string/departure_date"
                android:inputType="date"
                android:onClick="showDatePickerDialog"
                android:paddingLeft="5dp"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/time_input"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@android:color/white"
                android:ems="10"
                android:hint="@string/time"
                android:inputType="textAutoCorrect"
                android:onClick="showTimePickerDialog"
                android:paddingLeft="5dp"
                android:textColor="@android:color/black" />

            <EditText
                android:id="@+id/seats_input"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@android:color/white"
                android:ems="10"
                android:hint="@string/seats_input"
                android:inputType="number"
                android:paddingLeft="5dp"
                android:textColor="@android:color/black" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="0dp"
            android:layout_marginBottom="0dp"
            android:gravity="center_vertical"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/linearLayout"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/vehicleInfoBox"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:background="@android:color/white"
                android:ems="10"
                android:hint="Your vehicle type"
                android:inputType="textAutoCorrect"
                android:paddingLeft="5dp"
                android:textColor="@android:color/black" />

            <EditText
                android:id="@+id/licensePlateBox"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:background="@android:color/white"
                android:ems="10"
                android:hint="Licence Plate #"
                android:inputType="textAutoCorrect"
                android:paddingLeft="5dp"
                android:textColor="@android:color/black" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Additional Comments"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="303dp" />

        <EditText
            android:id="@+id/comments_input_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/comments_input"
            tools:layout_editor_absoluteX="36dp"
            tools:layout_editor_absoluteY="333dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout6">

        <TextView
            android:id="@+id/textView19"
            android:layout_width="315dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="Destinations and Price"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/addDestinationButton"
            android:layout_width="44dp"
            android:layout_height="match_parent"
            android:layout_marginRight="15dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/add_circle" />

        <ImageButton
            android:id="@+id/removeDestinationButton"
            android:layout_width="44dp"
            android:layout_height="match_parent"
            android:layout_marginRight="15dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/remove_circle" />

    </LinearLayout>

    <Button
        android:id="@+id/_create"
        android:layout_width="90dp"
        android:layout_height="43dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:background="#788b91"
        android:text="Post"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ListView
        android:id="@+id/destinationsListView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/_create"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout5" />

</android.support.constraint.ConstraintLayout>